--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "apico": "^1.0.13"
+    "apico": "^1.1.1",
+    "mysql2": "^3.9.1"
   }
 }
